Bug 169727 - Left hand pane of main base window does not update system theme dynamically
Summary: Left hand pane of main base window does not update system theme dynamically
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.8.1.1 release
Hardware: All All
: medium normal
Assignee: dcbw@libreoffice.org
URL:
Whiteboard: target:26.8.0 target:26.2.0.0.beta2 t...
Keywords:
Depends on:
Blocks: Dark-Mode
  Show dependency treegraph
 
Reported: 2025-11-28 12:53 UTC by Alex Thurgood
Modified: 2026-04-12 01:37 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Thurgood 2025-11-28 12:53:59 UTC
Description:
1) Open a Base document (ODB file).

2) Switch the system desktop theme from Light to Dark.

3) The background in the left hand pane does not update along with the other window backgrounds.

4) Close the ODB file.

5) Switch the system desktop theme back to Dark.

6) Re-open the ODB file.

7) Switch the system desktop theme to Light.

8) Same result, the left hand pane does not have an updated background, contrary to all of the other panes.




Steps to Reproduce:
See above.

Actual Results:
The left hand pane does not update dynamically.

Expected Results:
All panes should update dynamically when the system theme changes.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.8.1.1 (AARCH64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 8; OS: macOS 26.1; UI render: Skia/Metal; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded
Comment 1 dcbw@libreoffice.org 2025-12-09 19:51:41 UTC
Also happens in LO 24.8.7.2 (x86_64) in Fedora 41; not Mac-specific.
Comment 2 dcbw@libreoffice.org 2025-12-09 21:48:27 UTC
This happens to Base's Tables/Forms/Queries/Reports picker and the initial picker dialog's Recent Documents and Templates views because they are all based off sfx2's ThumbnailView object, which does not re-check system theme colors before repainting itself. In addition to the ThumbnailView not rechecking, each of the sub-classes has specific colors like the highlight color that are not rechecked either.
Comment 3 dcbw@libreoffice.org 2025-12-10 20:32:06 UTC
Fixed in https://gerrit.libreoffice.org/c/core/+/195402
Comment 4 Commit Notification 2025-12-13 12:26:47 UTC
Dan Williams committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/92b013bdb4d567b98bfcf42a0831abe42117691c

tdf#169727 update ThumbnailView colors for system theme changes

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-12-13 14:17:57 UTC
Dan Williams committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/ded39ec772e6fc0c4d943e6ca0673a89d89493cc

tdf#169727 update ThumbnailView colors for system theme changes

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-12-13 15:05:04 UTC
Dan Williams committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/5b025a8fdc7e2e905aefa017aa05b02b5568fe66

tdf#169727 update ThumbnailView colors for system theme changes

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Buovjaga 2026-01-03 17:33:55 UTC
If this is fixed, feel free to close as such.
Comment 8 stragu 2026-01-07 02:13:49 UTC
See also bug 152263 which was fixed by Caolàn in 254acd7c1d8fef437985c9b428a0edddede9d5a9, and Windows colour choice in 70c46e0e03a758fda4e94b561fdcae722414719f