tdf#169727 update ThumbnailView colors for system theme changes

The ThumbnailView never updated cached colors after creation, leading to
wrong background colors when the system theme changed while LO was
running (eg between Dark/Light mode). Since subclasses need to override
the parent class colors, we must first let subclasses update internal
cached colors then copy those to the item attributes. Then during
Paint() requery style settings to ensure our colors are up to date.

Change-Id: I19bbfb296ba213cf7ad53eff8bd24fe291679184
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195402
Tested-by: Hossein <hossein@libreoffice.org>
Tested-by: Jenkins
Reviewed-by: Hossein <hossein@libreoffice.org>
(cherry picked from commit 92b013bdb4d567b98bfcf42a0831abe42117691c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195599
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>